Final Checkpoint Presentation (Compiler + VM)/Compiler Libraries/y.output
   0  $accept : PROGRAM $end

   1  PROGRAM : LIST
   2          | GLOBAL_DEC LIST

   3  $$1 :

   4  GLOBAL_DEC : $$1 DECLARATION SCOL

   5  LIST : LIST FUNCTION
   6       | LIST CLASSDEF
   7       | LIST STRUCTDEF
   8       | LIST FUNCTION
   9       |

  10  $$2 :

  11  FUNCTION : FUNCTION_PREFIX LF $$2 STMTLIST RF

  12  $$3 :

  13  FUNCTION_PREFIX : FUNCTION_TYPE ID $$3 LP PARAMLIST RP

  14  FUNCTION_TYPE : VOID
  15                | INT
  16                | CHAR
  17                | FLOAT
  18                | STRING
  19                | INT MUL
  20                | CHAR MUL
  21                | ID MUL
  22                | VOID MUL

  23  DATA_TYPE : INT
  24            | CHAR
  25            | FLOAT
  26            | STRING
  27            | INT MUL
  28            | CHAR MUL
  29            | ID MUL
  30            | VOID MUL
  31            | INT LB RB
  32            | CHAR LB RB
  33            | FLOAT LB RB

  34  $$4 :

  35  PARAMLIST : PARAM $$4 COMMA PARAMLIST
  36            | PARAM
  37            |

  38  PARAM : DATA_TYPE ID

  39  STMTLIST : STMT STMTLIST
  40           |

  41  $$5 :

  42  CLASSDEF : CLASS ID LF $$5 CLASSBODY RF

  43  CLASSBODY : CLASSMEMBER CLASSBODY
  44            |

  45  CLASSMEMBER : ACCESS_MODIFIER DECLARATION SCOL
  46              | ACCESS_MODIFIER FUNCTION

  47  ACCESS_MODIFIER : PUBLIC
  48                  | PRIVATE
  49                  | PROTECTED

  50  STRUCTDEF : STRUCT ID LF STRUCTVAR RF SCOL

  51  STRUCTVAR : DECLARATION SCOL STRUCTVAR
  52            | STRUCT ID ID SCOL STRUCTVAR
  53            |

  54  STMT : DECLARATION SCOL
  55       | ASSIGNMENT SCOL
  56       | EXPR SCOL
  57       | RETURN_STMT SCOL
  58       | IF_STMT
  59       | WHILE_STMT
  60       | FOR_STMT
  61       | BREAK SCOL
  62       | CONTINUE SCOL
  63       | INPUT LP ID RP SCOL
  64       | INPUT LP ID LB EXPR RB RP SCOL
  65       | OUTPUT LP EXPR RP SCOL
  66       | OUTPUT LP DQ STR DQ RP SCOL
  67       | OUTPUT LP SQ CHARACTER SQ RP SCOL

  68  DECLARATION : DATA_TYPE ID
  69              | DATA_TYPE ID ASSIGN EXPR
  70              | STRING ID ASSIGN STR
  71              | DATA_TYPE ID LB INT_NUM RB

  72  $$6 :

  73  DECLARATION : DATA_TYPE ID LB INT_NUM RB ASSIGN $$6 LF ARR_VALUES RF
  74              | ID ID ASSIGN NEW ID LP RP

  75  $$7 :

  76  ARR_VALUES : CONST $$7 COMMA ARR_VALUES
  77             | CONST

  78  RETURN_STMT : RETURN EXPR
  79              | RETURN

  80  EXPR : EXPR ADD EXPR
  81       | EXPR SUB EXPR
  82       | EXPR MUL EXPR
  83       | EXPR DIV EXPR
  84       | EXPR EQ EXPR
  85       | EXPR NE EXPR
  86       | EXPR LT EXPR
  87       | EXPR GT EXPR
  88       | EXPR LE EXPR
  89       | EXPR GE EXPR
  90       | EXPR MOD EXPR
  91       | EXPR AND EXPR
  92       | EXPR OR EXPR
  93       | EXPR BITAND EXPR
  94       | EXPR BITOR EXPR
  95       | UNARY_EXPR
  96       | PRIMARY_EXPR
  97       | POSTFIX_EXPR

  98  POSTFIX_EXPR : FUNCTION_CALL
  99               | ID LB EXPR RB

 100  UNARY_EXPR : UNARY_OP PRIMARY_EXPR

 101  PRIMARY_EXPR : ID
 102               | CONST
 103               | LP EXPR RP
 104               | NULLP

 105  UNARY_OP : ADD
 106           | SUB
 107           | NEG

 108  CONST : INT_NUM
 109        | FLOAT_NUM
 110        | CHARACTER

 111  ASSIGNMENT : ID ASSIGN EXPR
 112             | ID LB EXPR RB ASSIGN EXPR

 113  $$8 :

 114  $$9 :

 115  $$10 :

 116  $$11 :

 117  IF_STMT : IF $$8 LP EXPR RP $$9 LF $$10 STMTLIST RF $$11 ELSE_STMT

 118  $$12 :

 119  $$13 :

 120  $$14 :

 121  $$15 :

 122  ELIF_STMT : ELSE IF $$12 LP EXPR RP $$13 LF $$14 STMTLIST RF $$15 ELIF_STMT
 123            |

 124  $$16 :

 125  ELSE_STMT : ELSE LF $$16 STMTLIST RF
 126            |

 127  $$17 :

 128  $$18 :

 129  $$19 :

 130  WHILE_STMT : WHILE $$17 LP EXPR RP $$18 LF $$19 STMTLIST RF

 131  $$20 :

 132  $$21 :

 133  $$22 :

 134  $$23 :

 135  FOR_STMT : FOR LP ASSIGNMENT SCOL $$20 EXPR SCOL $$21 ASSIGNMENT RP $$22 LF $$23 STMTLIST RF

 136  $$24 :

 137  FUNCTION_CALL : ID $$24 LP ARGUMENTLIST RP

 138  ARGUMENTLIST : ARG COMMA ARGUMENTLIST
 139               | ARG
 140               |

 141  ARG : EXPR

0: reduce/reduce conflict (reduce 3, reduce 9) on INT
0: reduce/reduce conflict (reduce 3, reduce 9) on CHAR
0: reduce/reduce conflict (reduce 3, reduce 9) on FLOAT
0: reduce/reduce conflict (reduce 3, reduce 9) on STRING
0: reduce/reduce conflict (reduce 3, reduce 9) on VOID
0: reduce/reduce conflict (reduce 3, reduce 9) on ID
state 0
	$accept : . PROGRAM $end  (0)
	$$1 : .  (3)
	LIST : .  (9)

	$end  reduce 9
	INT  reduce 3
	CHAR  reduce 3
	FLOAT  reduce 3
	STRING  reduce 3
	VOID  reduce 3
	CLASS  reduce 9
	STRUCT  reduce 9
	ID  reduce 3

	PROGRAM  goto 1
	LIST  goto 2
	GLOBAL_DEC  goto 3
	$$1  goto 4


state 1
	$accept : PROGRAM . $end  (0)

	$end  accept


state 2
	PROGRAM : LIST .  (1)
	LIST : LIST . FUNCTION  (5)
	LIST : LIST . CLASSDEF  (6)
	LIST : LIST . STRUCTDEF  (7)
	LIST : LIST . FUNCTION  (8)

	INT  shift 5
	CHAR  shift 6
	FLOAT  shift 7
	STRING  shift 8
	VOID  shift 9
	CLASS  shift 10
	STRUCT  shift 11
	ID  shift 12
	$end  reduce 1

	FUNCTION  goto 13
	FUNCTION_PREFIX  goto 14
	CLASSDEF  goto 15
	FUNCTION_TYPE  goto 16
	STRUCTDEF  goto 17


state 3
	PROGRAM : GLOBAL_DEC . LIST  (2)
	LIST : .  (9)

	.  reduce 9

	LIST  goto 18


state 4
	GLOBAL_DEC : $$1 . DECLARATION SCOL  (4)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	ID  shift 24
	.  error

	DATA_TYPE  goto 25
	DECLARATION  goto 26


state 5
	FUNCTION_TYPE : INT .  (15)
	FUNCTION_TYPE : INT . MUL  (19)

	MUL  shift 27
	ID  reduce 15


state 6
	FUNCTION_TYPE : CHAR .  (16)
	FUNCTION_TYPE : CHAR . MUL  (20)

	MUL  shift 28
	ID  reduce 16


state 7
	FUNCTION_TYPE : FLOAT .  (17)

	.  reduce 17


state 8
	FUNCTION_TYPE : STRING .  (18)

	.  reduce 18


state 9
	FUNCTION_TYPE : VOID .  (14)
	FUNCTION_TYPE : VOID . MUL  (22)

	MUL  shift 29
	ID  reduce 14


state 10
	CLASSDEF : CLASS . ID LF $$5 CLASSBODY RF  (42)

	ID  shift 30
	.  error


state 11
	STRUCTDEF : STRUCT . ID LF STRUCTVAR RF SCOL  (50)

	ID  shift 31
	.  error


state 12
	FUNCTION_TYPE : ID . MUL  (21)

	MUL  shift 32
	.  error


13: reduce/reduce conflict (reduce 5, reduce 8) on $end
13: reduce/reduce conflict (reduce 5, reduce 8) on INT
13: reduce/reduce conflict (reduce 5, reduce 8) on CHAR
13: reduce/reduce conflict (reduce 5, reduce 8) on FLOAT
13: reduce/reduce conflict (reduce 5, reduce 8) on STRING
13: reduce/reduce conflict (reduce 5, reduce 8) on VOID
13: reduce/reduce conflict (reduce 5, reduce 8) on CLASS
13: reduce/reduce conflict (reduce 5, reduce 8) on STRUCT
13: reduce/reduce conflict (reduce 5, reduce 8) on ID
state 13
	LIST : LIST FUNCTION .  (5)
	LIST : LIST FUNCTION .  (8)

	.  reduce 5


state 14
	FUNCTION : FUNCTION_PREFIX . LF $$2 STMTLIST RF  (11)

	LF  shift 33
	.  error


state 15
	LIST : LIST CLASSDEF .  (6)

	.  reduce 6


state 16
	FUNCTION_PREFIX : FUNCTION_TYPE . ID $$3 LP PARAMLIST RP  (13)

	ID  shift 34
	.  error


state 17
	LIST : LIST STRUCTDEF .  (7)

	.  reduce 7


state 18
	PROGRAM : GLOBAL_DEC LIST .  (2)
	LIST : LIST . FUNCTION  (5)
	LIST : LIST . CLASSDEF  (6)
	LIST : LIST . STRUCTDEF  (7)
	LIST : LIST . FUNCTION  (8)

	INT  shift 5
	CHAR  shift 6
	FLOAT  shift 7
	STRING  shift 8
	VOID  shift 9
	CLASS  shift 10
	STRUCT  shift 11
	ID  shift 12
	$end  reduce 2

	FUNCTION  goto 13
	FUNCTION_PREFIX  goto 14
	CLASSDEF  goto 15
	FUNCTION_TYPE  goto 16
	STRUCTDEF  goto 17


state 19
	DATA_TYPE : INT .  (23)
	DATA_TYPE : INT . MUL  (27)
	DATA_TYPE : INT . LB RB  (31)

	MUL  shift 35
	LB  shift 36
	ID  reduce 23


state 20
	DATA_TYPE : CHAR .  (24)
	DATA_TYPE : CHAR . MUL  (28)
	DATA_TYPE : CHAR . LB RB  (32)

	MUL  shift 37
	LB  shift 38
	ID  reduce 24


state 21
	DATA_TYPE : FLOAT .  (25)
	DATA_TYPE : FLOAT . LB RB  (33)

	LB  shift 39
	ID  reduce 25


22: shift/reduce conflict (shift 40, reduce 26) on ID
state 22
	DATA_TYPE : STRING .  (26)
	DECLARATION : STRING . ID ASSIGN STR  (70)

	ID  shift 40


state 23
	DATA_TYPE : VOID . MUL  (30)

	MUL  shift 41
	.  error


state 24
	DATA_TYPE : ID . MUL  (29)
	DECLARATION : ID . ID ASSIGN NEW ID LP RP  (74)

	ID  shift 42
	MUL  shift 43
	.  error


state 25
	DECLARATION : DATA_TYPE . ID  (68)
	DECLARATION : DATA_TYPE . ID ASSIGN EXPR  (69)
	DECLARATION : DATA_TYPE . ID LB INT_NUM RB  (71)
	DECLARATION : DATA_TYPE . ID LB INT_NUM RB ASSIGN $$6 LF ARR_VALUES RF  (73)

	ID  shift 44
	.  error


state 26
	GLOBAL_DEC : $$1 DECLARATION . SCOL  (4)

	SCOL  shift 45
	.  error


state 27
	FUNCTION_TYPE : INT MUL .  (19)

	.  reduce 19


state 28
	FUNCTION_TYPE : CHAR MUL .  (20)

	.  reduce 20


state 29
	FUNCTION_TYPE : VOID MUL .  (22)

	.  reduce 22


state 30
	CLASSDEF : CLASS ID . LF $$5 CLASSBODY RF  (42)

	LF  shift 46
	.  error


state 31
	STRUCTDEF : STRUCT ID . LF STRUCTVAR RF SCOL  (50)

	LF  shift 47
	.  error


state 32
	FUNCTION_TYPE : ID MUL .  (21)

	.  reduce 21


state 33
	FUNCTION : FUNCTION_PREFIX LF . $$2 STMTLIST RF  (11)
	$$2 : .  (10)

	.  reduce 10

	$$2  goto 48


state 34
	FUNCTION_PREFIX : FUNCTION_TYPE ID . $$3 LP PARAMLIST RP  (13)
	$$3 : .  (12)

	.  reduce 12

	$$3  goto 49


state 35
	DATA_TYPE : INT MUL .  (27)

	.  reduce 27


state 36
	DATA_TYPE : INT LB . RB  (31)

	RB  shift 50
	.  error


state 37
	DATA_TYPE : CHAR MUL .  (28)

	.  reduce 28


state 38
	DATA_TYPE : CHAR LB . RB  (32)

	RB  shift 51
	.  error


state 39
	DATA_TYPE : FLOAT LB . RB  (33)

	RB  shift 52
	.  error


state 40
	DECLARATION : STRING ID . ASSIGN STR  (70)

	ASSIGN  shift 53
	.  error


state 41
	DATA_TYPE : VOID MUL .  (30)

	.  reduce 30


state 42
	DECLARATION : ID ID . ASSIGN NEW ID LP RP  (74)

	ASSIGN  shift 54
	.  error


state 43
	DATA_TYPE : ID MUL .  (29)

	.  reduce 29


state 44
	DECLARATION : DATA_TYPE ID .  (68)
	DECLARATION : DATA_TYPE ID . ASSIGN EXPR  (69)
	DECLARATION : DATA_TYPE ID . LB INT_NUM RB  (71)
	DECLARATION : DATA_TYPE ID . LB INT_NUM RB ASSIGN $$6 LF ARR_VALUES RF  (73)

	ASSIGN  shift 55
	LB  shift 56
	SCOL  reduce 68


state 45
	GLOBAL_DEC : $$1 DECLARATION SCOL .  (4)

	.  reduce 4


state 46
	CLASSDEF : CLASS ID LF . $$5 CLASSBODY RF  (42)
	$$5 : .  (41)

	.  reduce 41

	$$5  goto 57


state 47
	STRUCTDEF : STRUCT ID LF . STRUCTVAR RF SCOL  (50)
	STRUCTVAR : .  (53)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	STRUCT  shift 58
	ID  shift 24
	RF  reduce 53

	DATA_TYPE  goto 25
	DECLARATION  goto 59
	STRUCTVAR  goto 60


state 48
	FUNCTION : FUNCTION_PREFIX LF $$2 . STMTLIST RF  (11)
	STMTLIST : .  (40)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	RETURN  shift 61
	INPUT  shift 62
	OUTPUT  shift 63
	IF  shift 64
	WHILE  shift 65
	FOR  shift 66
	BREAK  shift 67
	CONTINUE  shift 68
	INT_NUM  shift 69
	FLOAT_NUM  shift 70
	ID  shift 71
	ADD  shift 72
	SUB  shift 73
	LP  shift 74
	CHARACTER  shift 75
	NEG  shift 76
	NULLP  shift 77
	RF  reduce 40

	DATA_TYPE  goto 25
	STMTLIST  goto 78
	STMT  goto 79
	DECLARATION  goto 80
	ASSIGNMENT  goto 81
	EXPR  goto 82
	RETURN_STMT  goto 83
	UNARY_EXPR  goto 84
	PRIMARY_EXPR  goto 85
	UNARY_OP  goto 86
	CONST  goto 87
	IF_STMT  goto 88
	WHILE_STMT  goto 89
	FOR_STMT  goto 90
	FUNCTION_CALL  goto 91
	POSTFIX_EXPR  goto 92


state 49
	FUNCTION_PREFIX : FUNCTION_TYPE ID $$3 . LP PARAMLIST RP  (13)

	LP  shift 93
	.  error


state 50
	DATA_TYPE : INT LB RB .  (31)

	.  reduce 31


state 51
	DATA_TYPE : CHAR LB RB .  (32)

	.  reduce 32


state 52
	DATA_TYPE : FLOAT LB RB .  (33)

	.  reduce 33


state 53
	DECLARATION : STRING ID ASSIGN . STR  (70)

	STR  shift 94
	.  error


state 54
	DECLARATION : ID ID ASSIGN . NEW ID LP RP  (74)

	NEW  shift 95
	.  error


state 55
	DECLARATION : DATA_TYPE ID ASSIGN . EXPR  (69)

	INT_NUM  shift 69
	FLOAT_NUM  shift 70
	ID  shift 96
	ADD  shift 72
	SUB  shift 73
	LP  shift 74
	CHARACTER  shift 75
	NEG  shift 76
	NULLP  shift 77
	.  error

	EXPR  goto 97
	UNARY_EXPR  goto 84
	PRIMARY_EXPR  goto 85
	UNARY_OP  goto 86
	CONST  goto 87
	FUNCTION_CALL  goto 91
	POSTFIX_EXPR  goto 92


state 56
	DECLARATION : DATA_TYPE ID LB . INT_NUM RB  (71)
	DECLARATION : DATA_TYPE ID LB . INT_NUM RB ASSIGN $$6 LF ARR_VALUES RF  (73)

	INT_NUM  shift 98
	.  error


state 57
	CLASSDEF : CLASS ID LF $$5 . CLASSBODY RF  (42)
	CLASSBODY : .  (44)

	PUBLIC  shift 99
	PRIVATE  shift 100
	PROTECTED  shift 101
	RF  reduce 44

	CLASSBODY  goto 102
	CLASSMEMBER  goto 103
	ACCESS_MODIFIER  goto 104


state 58
	STRUCTVAR : STRUCT . ID ID SCOL STRUCTVAR  (52)

	ID  shift 105
	.  error


state 59
	STRUCTVAR : DECLARATION . SCOL STRUCTVAR  (51)

	SCOL  shift 106
	.  error


state 60
	STRUCTDEF : STRUCT ID LF STRUCTVAR . RF SCOL  (50)

	RF  shift 107
	.  error


state 61
	RETURN_STMT : RETURN . EXPR  (78)
	RETURN_STMT : RETURN .  (79)

	INT_NUM  shift 69
	FLOAT_NUM  shift 70
	ID  shift 96
	ADD  shift 72
	SUB  shift 73
	LP  shift 74
	CHARACTER  shift 75
	NEG  shift 76
	NULLP  shift 77
	SCOL  reduce 79

	EXPR  goto 108
	UNARY_EXPR  goto 84
	PRIMARY_EXPR  goto 85
	UNARY_OP  goto 86
	CONST  goto 87
	FUNCTION_CALL  goto 91
	POSTFIX_EXPR  goto 92


state 62
	STMT : INPUT . LP ID RP SCOL  (63)
	STMT : INPUT . LP ID LB EXPR RB RP SCOL  (64)

	LP  shift 109
	.  error


state 63
	STMT : OUTPUT . LP EXPR RP SCOL  (65)
	STMT : OUTPUT . LP DQ STR DQ RP SCOL  (66)
	STMT : OUTPUT . LP SQ CHARACTER SQ RP SCOL  (67)

	LP  shift 110
	.  error


state 64
	IF_STMT : IF . $$8 LP EXPR RP $$9 LF $$10 STMTLIST RF $$11 ELSE_STMT  (117)
	$$8 : .  (113)

	.  reduce 113

	$$8  goto 111


state 65
	WHILE_STMT : WHILE . $$17 LP EXPR RP $$18 LF $$19 STMTLIST RF  (130)
	$$17 : .  (127)

	.  reduce 127

	$$17  goto 112


state 66
	FOR_STMT : FOR . LP ASSIGNMENT SCOL $$20 EXPR SCOL $$21 ASSIGNMENT RP $$22 LF $$23 STMTLIST RF  (135)

	LP  shift 113
	.  error


state 67
	STMT : BREAK . SCOL  (61)

	SCOL  shift 114
	.  error


state 68
	STMT : CONTINUE . SCOL  (62)

	SCOL  shift 115
	.  error


state 69
	CONST : INT_NUM .  (108)

	.  reduce 108


state 70
	CONST : FLOAT_NUM .  (109)

	.  reduce 109


71: shift/reduce conflict (shift 43, reduce 101) on MUL
state 71
	DATA_TYPE : ID . MUL  (29)
	DECLARATION : ID . ID ASSIGN NEW ID LP RP  (74)
	POSTFIX_EXPR : ID . LB EXPR RB  (99)
	PRIMARY_EXPR : ID .  (101)
	ASSIGNMENT : ID . ASSIGN EXPR  (111)
	ASSIGNMENT : ID . LB EXPR RB ASSIGN EXPR  (112)
	FUNCTION_CALL : ID . $$24 LP ARGUMENTLIST RP  (137)
	$$24 : .  (136)

	ID  shift 42
	MUL  shift 43
	ASSIGN  shift 116
	LB  shift 117
	ADD  reduce 101
	SUB  reduce 101
	DIV  reduce 101
	MOD  reduce 101
	EQ  reduce 101
	NE  reduce 101
	LT  reduce 101
	GT  reduce 101
	LE  reduce 101
	GE  reduce 101
	AND  reduce 101
	OR  reduce 101
	SCOL  reduce 101
	LP  reduce 136
	BITAND  reduce 101
	BITOR  reduce 101

	$$24  goto 118


state 72
	UNARY_OP : ADD .  (105)

	.  reduce 105


state 73
	UNARY_OP : SUB .  (106)

	.  reduce 106


state 74
	PRIMARY_EXPR : LP . EXPR RP  (103)

	INT_NUM  shift 69
	FLOAT_NUM  shift 70
	ID  shift 96
	ADD  shift 72
	SUB  shift 73
	LP  shift 74
	CHARACTER  shift 75
	NEG  shift 76
	NULLP  shift 77
	.  error

	EXPR  goto 119
	UNARY_EXPR  goto 84
	PRIMARY_EXPR  goto 85
	UNARY_OP  goto 86
	CONST  goto 87
	FUNCTION_CALL  goto 91
	POSTFIX_EXPR  goto 92


state 75
	CONST : CHARACTER .  (110)

	.  reduce 110


state 76
	UNARY_OP : NEG .  (107)

	.  reduce 107


state 77
	PRIMARY_EXPR : NULLP .  (104)

	.  reduce 104


state 78
	FUNCTION : FUNCTION_PREFIX LF $$2 STMTLIST . RF  (11)

	RF  shift 120
	.  error


state 79
	STMTLIST : STMT . STMTLIST  (39)
	STMTLIST : .  (40)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	RETURN  shift 61
	INPUT  shift 62
	OUTPUT  shift 63
	IF  shift 64
	WHILE  shift 65
	FOR  shift 66
	BREAK  shift 67
	CONTINUE  shift 68
	INT_NUM  shift 69
	FLOAT_NUM  shift 70
	ID  shift 71
	ADD  shift 72
	SUB  shift 73
	LP  shift 74
	CHARACTER  shift 75
	NEG  shift 76
	NULLP  shift 77
	RF  reduce 40

	DATA_TYPE  goto 25
	STMTLIST  goto 121
	STMT  goto 79
	DECLARATION  goto 80
	ASSIGNMENT  goto 81
	EXPR  goto 82
	RETURN_STMT  goto 83
	UNARY_EXPR  goto 84
	PRIMARY_EXPR  goto 85
	UNARY_OP  goto 86
	CONST  goto 87
	IF_STMT  goto 88
	WHILE_STMT  goto 89
	FOR_STMT  goto 90
	FUNCTION_CALL  goto 91
	POSTFIX_EXPR  goto 92


state 80
	STMT : DECLARATION . SCOL  (54)

	SCOL  shift 122
	.  error


state 81
	STMT : ASSIGNMENT . SCOL  (55)

	SCOL  shift 123
	.  error


state 82
	STMT : EXPR . SCOL  (56)
	EXPR : EXPR . ADD EXPR  (80)
	EXPR : EXPR . SUB EXPR  (81)
	EXPR : EXPR . MUL EXPR  (82)
	EXPR : EXPR . DIV EXPR  (83)
	EXPR : EXPR . EQ EXPR  (84)
	EXPR : EXPR . NE EXPR  (85)
	EXPR : EXPR . LT EXPR  (86)
	EXPR : EXPR . GT EXPR  (87)
	EXPR : EXPR . LE EXPR  (88)
	EXPR : EXPR . GE EXPR  (89)
	EXPR : EXPR . MOD EXPR  (90)
	EXPR : EXPR . AND EXPR  (91)
	EXPR : EXPR . OR EXPR  (92)
	EXPR : EXPR . BITAND EXPR  (93)
	EXPR : EXPR . BITOR EXPR  (94)

	ADD  shift 124
	SUB  shift 125
	MUL  shift 126
	DIV  shift 127
	MOD  shift 128
	EQ  shift 129
	NE  shift 130
	LT  shift 131
	GT  shift 132
	LE  shift 133
	GE  shift 134
	AND  shift 135
	OR  shift 136
	SCOL  shift 137
	BITAND  shift 138
	BITOR  shift 139
	.  error


state 83
	STMT : RETURN_STMT . SCOL  (57)

	SCOL  shift 140
	.  error


state 84
	EXPR : UNARY_EXPR .  (95)

	.  reduce 95


state 85
	EXPR : PRIMARY_EXPR .  (96)

	.  reduce 96


state 86
	UNARY_EXPR : UNARY_OP . PRIMARY_EXPR  (100)

	INT_NUM  shift 69
	FLOAT_NUM  shift 70
	ID  shift 141
	LP  shift 74
	CHARACTER  shift 75
	NULLP  shift 77
	.  error

	PRIMARY_EXPR  goto 142
	CONST  goto 87


state 87
	PRIMARY_EXPR : CONST .  (102)

	.  reduce 102


state 88
	STMT : IF_STMT .  (58)

	.  reduce 58


state 89
	STMT : WHILE_STMT .  (59)

	.  reduce 59


state 90
	STMT : FOR_STMT .  (60)

	.  reduce 60


state 91
	POSTFIX_EXPR : FUNCTION_CALL .  (98)

	.  reduce 98


state 92
	EXPR : POSTFIX_EXPR .  (97)

	.  reduce 97


state 93
	FUNCTION_PREFIX : FUNCTION_TYPE ID $$3 LP . PARAMLIST RP  (13)
	PARAMLIST : .  (37)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 143
	VOID  shift 23
	ID  shift 144
	RP  reduce 37

	DATA_TYPE  goto 145
	PARAMLIST  goto 146
	PARAM  goto 147


state 94
	DECLARATION : STRING ID ASSIGN STR .  (70)

	.  reduce 70


state 95
	DECLARATION : ID ID ASSIGN NEW . ID LP RP  (74)

	ID  shift 148
	.  error


state 96
	POSTFIX_EXPR : ID . LB EXPR RB  (99)
	PRIMARY_EXPR : ID .  (101)
	FUNCTION_CALL : ID . $$24 LP ARGUMENTLIST RP  (137)
	$$24 : .  (136)

	LB  shift 149
	ADD  reduce 101
	SUB  reduce 101
	MUL  reduce 101
	DIV  reduce 101
	MOD  reduce 101
	EQ  reduce 101
	NE  reduce 101
	LT  reduce 101
	GT  reduce 101
	LE  reduce 101
	GE  reduce 101
	AND  reduce 101
	OR  reduce 101
	SCOL  reduce 101
	COMMA  reduce 101
	LP  reduce 136
	RP  reduce 101
	RB  reduce 101
	BITAND  reduce 101
	BITOR  reduce 101

	$$24  goto 118


state 97
	DECLARATION : DATA_TYPE ID ASSIGN EXPR .  (69)
	EXPR : EXPR . ADD EXPR  (80)
	EXPR : EXPR . SUB EXPR  (81)
	EXPR : EXPR . MUL EXPR  (82)
	EXPR : EXPR . DIV EXPR  (83)
	EXPR : EXPR . EQ EXPR  (84)
	EXPR : EXPR . NE EXPR  (85)
	EXPR : EXPR . LT EXPR  (86)
	EXPR : EXPR . GT EXPR  (87)
	EXPR : EXPR . LE EXPR  (88)
	EXPR : EXPR . GE EXPR  (89)
	EXPR : EXPR . MOD EXPR  (90)
	EXPR : EXPR . AND EXPR  (91)
	EXPR : EXPR . OR EXPR  (92)
	EXPR : EXPR . BITAND EXPR  (93)
	EXPR : EXPR . BITOR EXPR  (94)

	ADD  shift 124
	SUB  shift 125
	MUL  shift 126
	DIV  shift 127
	MOD  shift 128
	EQ  shift 129
	NE  shift 130
	LT  shift 131
	GT  shift 132
	LE  shift 133
	GE  shift 134
	AND  shift 135
	OR  shift 136
	BITAND  shift 138
	BITOR  shift 139
	SCOL  reduce 69


state 98
	DECLARATION : DATA_TYPE ID LB INT_NUM . RB  (71)
	DECLARATION : DATA_TYPE ID LB INT_NUM . RB ASSIGN $$6 LF ARR_VALUES RF  (73)

	RB  shift 150
	.  error


state 99
	ACCESS_MODIFIER : PUBLIC .  (47)

	.  reduce 47


state 100
	ACCESS_MODIFIER : PRIVATE .  (48)

	.  reduce 48


state 101
	ACCESS_MODIFIER : PROTECTED .  (49)

	.  reduce 49


state 102
	CLASSDEF : CLASS ID LF $$5 CLASSBODY . RF  (42)

	RF  shift 151
	.  error


state 103
	CLASSBODY : CLASSMEMBER . CLASSBODY  (43)
	CLASSBODY : .  (44)

	PUBLIC  shift 99
	PRIVATE  shift 100
	PROTECTED  shift 101
	RF  reduce 44

	CLASSBODY  goto 152
	CLASSMEMBER  goto 103
	ACCESS_MODIFIER  goto 104


state 104
	CLASSMEMBER : ACCESS_MODIFIER . DECLARATION SCOL  (45)
	CLASSMEMBER : ACCESS_MODIFIER . FUNCTION  (46)

	INT  shift 153
	CHAR  shift 154
	FLOAT  shift 155
	STRING  shift 156
	VOID  shift 157
	ID  shift 158
	.  error

	FUNCTION  goto 159
	FUNCTION_PREFIX  goto 14
	DATA_TYPE  goto 25
	DECLARATION  goto 160
	FUNCTION_TYPE  goto 16


state 105
	STRUCTVAR : STRUCT ID . ID SCOL STRUCTVAR  (52)

	ID  shift 161
	.  error


state 106
	STRUCTVAR : DECLARATION SCOL . STRUCTVAR  (51)
	STRUCTVAR : .  (53)

	INT  shift 19
	CHAR  shift 20
	FLOAT  shift 21
	STRING  shift 22
	VOID  shift 23
	STRUCT  shift 58
	ID  shift 24
	RF  reduce 53

	DATA_TYPE  goto 25
	DECLARATION  goto 59
	STRUCTVAR  goto 162


state 107
	STRUCTDEF : STRUCT ID LF STRUCTVAR RF . SCOL  (50)

	SCOL  shift 163
	.  error


state 108
	RETURN_STMT : RETURN EXPR .  (78)
	EXPR : EXPR . ADD EXPR  (80)
	EXPR : EXPR . SUB EXPR  (81)
	EXPR : EXPR . MUL EXPR  (82)
	EXPR : EXPR . DIV EXPR  (83)
	EXPR : EXPR . EQ EXPR  (84)
	EXPR : EXPR . NE EXPR  (85)
	EXPR : EXPR . LT EXPR  (86)
	EXPR : EXPR . GT EXPR  (87)
	EXPR : EXPR . LE EXPR  (88)
	EXPR : EXPR . GE EXPR  (89)
	EXPR : EXPR . MOD EXPR  (90)
	EXPR : EXPR . AND EXPR  (91)
	EXPR : EXPR . OR EXPR  (92)
	EXPR : EXPR . BITAND EXPR  (93)
	EXPR : EXPR . BITOR EXPR  (94)

	ADD  shift 124
	SUB  shift 125
	MUL  shift 126
	DIV  shift 127
	MOD  shift 128
	EQ  shift 129
	NE  shift 130
	LT  shift 131
	GT  shift 132
	LE  shift 133
	GE  shift 134
	AND  shift 135
	OR  shift 136
	BITAND  shift 138
	BITOR  shift 139
	SCOL  reduce 78


state 109
	STMT : INPUT LP . ID RP SCOL  (63)
	STMT : INPUT LP . ID LB EXPR RB RP SCOL  (64)

	ID  shift 164
	.  error


state 110
	STMT : OUTPUT LP . EXPR RP SCOL  (65)
	STMT : OUTPUT LP . DQ STR DQ RP SCOL  (66)
	STMT : OUTPUT LP . SQ CHARACTER SQ RP SCOL  (67)

	INT_NUM  shift 69
	FLOAT_NUM  shift 70
	ID  shift 96
	ADD  shift 72
	SUB  shift 73
	LP  shift 74
	CHARACTER  shift 75
	NEG  shift 76
	DQ  shift 165
	SQ  shift 166
	NULLP  shift 77
	.  error
